Added test with deployment dir

--- a/UnitTestProject1Fwk/UnitTestProject1Fwk.csproj
+++ b/UnitTestProject1Fwk/UnitTestProject1Fwk.csproj
@@ -59,6 +59,11 @@
       <Name>SomeClassLib1</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Junk.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
